Redirect to the updated record after it has been edited,  and records now can be opened by direct link